--- a/desafios/desafio12/estilo/style.css
+++ b/desafios/desafio12/estilo/style.css
@@ -1,13 +1,24 @@
 @charset "UTF-8";
 
+@import url('https://fonts.googleapis.com/css2?family=Passion+One&family=Sriracha&display=swap');
+
+@import url('https://fonts.googleapis.com/css2?family=Sriracha&display=swap');
+
 *{
     margin: 0px;
     padding: 0px;
 }
 
+:root{
+    --font01: Verdana, Geneva, Tahoma, sans-serif;
+    --font02: 'Passion One', cursive;
+    --font03: 'Sriracha', cursive;
+}
+
 html, body{
     min-height: 100vh;
     background-color: darkgray;
+    font-family: var(--font01);
 }
 
 header{
@@ -19,6 +30,8 @@ header{
 header > h1{
     padding-top: 50px;
     font-variant: small-caps;
+    font-family: var(--font02);
+    font-size: 10vw;
 }
 
 header{
@@ -40,6 +53,8 @@ section{
     padding-bottom: 10vh;
     padding-left: 30px;
     line-height: 2em;
+    font-family: var(--font03);
+    font-size: 3.5vw;
 }
 
 section.normal{
@@ -48,13 +63,15 @@ section.normal{
 }
 
 section.imagem{
+    
     background-color: rgb(53, 53, 53);
     color: white;
 }
 
 section.imagem > p{
+    display: inline-block;
     background-color: rgba(0, 0, 0, 0.276);
-    width: 400px;
+    padding: 8px;
 }
 
 footer{
