--- a/exercicios/ex026/mq004/estilos/media-query.css
+++ b/exercicios/ex026/mq004/estilos/media-query.css
@@ -11,17 +11,63 @@ Desktop: 992px até 1200px
 Grandes telas: acima de 1200px */
 
 @media print {
-    
+    body{
+        background-image: url(../imagens/back-print.jpg); /* Desnecessário */
+    }
+
+    main{
+        border: 2px solid black;
+    }
+
+    main h1{
+        font-family:'Courier New', Courier, monospace;
+        color: orangered;
+        text-shadow: none;
+    }
+
+    main::after{
+        content:'Eu conseguiiii';
+    }
+
+    img#phone{ display: none; }
+    img#tablet{ display: none; }
+    img#print{ display: block; }
+    img#pc{ display: none; }
+    img#tv{ display: none; }
 }
 
-@media screen and (min-width: 768px) and (max-width: 992px) {
-    
+@media screen and (min-width: 768px) and (max-width: 992px) { /* Tablet */
+    body {
+        background-image: url(../imagens/back-tablet.jpg);
+    }
+
+    img#phone{ display: none; }
+    img#tablet{ display: block; }
+    img#print{ display: none; }
+    img#pc{ display: none; }
+    img#tv{ display: none; }
 }
 
-@media screen and (min-width: 993px) and (max-width: 1200px) {
-    
+@media screen and (min-width: 993px) and (max-width: 1200px) { /* Desktop */
+    body{
+        background-image: url(../imagens/back-pc.jpg);
+    }
+
+    img#phone{ display: none; }
+    img#tablet{ display: none; }
+    img#print{ display: none; }
+    img#pc{ display: block; }
+    img#tv{ display: none; }
 }
 
-@media screen and (min-width: 1200px) {
-    
+@media screen and (min-width: 1200px) { /* Grandes Telas */
+    body{
+        background-image: url(../imagens/back-tv.jpg);
+    }
+
+    img#phone{ display: none; }
+    img#tablet{ display: none; }
+    img#print{ display: none; }
+    img#pc{ display: none; }
+    img#tv{ display: block; }
 }
